syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.inbox";
option java_outer_classname = "InboxProto";

service Inbox {
  rpc sendMessage(Message) returns(SendingResult) {}
  rpc getReceivedMessages(MessagesRequest) returns(MessagesResult) {}
}

message Message {
  string author = 1;
  string recipient = 2;
  string content = 3;
  uint64 timestamp = 4;
}

message SendingResult{
}

message MessagesRequest {
  string recipient = 1;
}
message MessagesResult{
  repeated Message messages = 1;
}
